UX: fix can manage column overlap
This PR adjusts the table so that when the can manage column is populated with Owner, it does not overlap the next proceeding column.

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -3,5 +3,5 @@
 }
 
 .group-members--can-manage {
-  grid-template-columns: 3fr 40px repeat(4, minmax(min-content, 1fr)) 3em;
+   grid-template-columns: 3fr repeat(5, minmax(min-content, 1fr)) 3em; 
 }
